# https---github.com-AmeerHamza-345

./: Advanced_Planetary__Weight__Calculator.ipynb  Assigment_08.ipynb  Assignment_07.ipynb  Assignment_08(C).ipynb  Basic_python_Projects.ipynb  class_11.ipynb
Q1/01_class/: pyproject.toml
Q1/01_class/app/: Assignment01.ipynb
Q1/02_class/: README.md
Q1/02_class/Assignment_02/: Assignment02.ipynb  pyproject.toml
Q1/Books/practice/: Hello_World.py  Name.py
Q1/List Methods.py/: List.ipynb
Q1/Python Exercises on Lists/: Exericses_list.ipynb
Q1/calculator.py/: calculator.ipynb
